# Flux-A-Custom-Educational-Deep-Learning-Framework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Activation_Function_Derivatives/: Activation_Function_Derivatives.cpp  Activation_Function_Derivatives.h
Activation_Functions/: Activation_Functions.cpp
Convolutional_Neural_Networks/: Pooling_Layers.cpp  Pooling_Layers.h  main.cpp
Convolutional_Neural_Networks/Kernels/: Kernels.cpp  Kernels.h
Convolutional_Neural_Networks/Padding Functions/: Tensor_Padding.cpp  Tensor_Padding.h
Convolutional_Neural_Networks/Utility_Migratory_Functions/: Utility_Migratory_Functions.cpp  Utility_Migratory_Functions.h
Forward Pass/: Forward_Pass.cpp  Forward_Pass.h
Initialize Weights/: Initialize_Weights.cpp  Initialize_Weights.h
Loss Functions/: Loss Functions.cpp  Loss Functions.h  Loss_Functions.cpp  Loss_Functions.h
Loss_Functions/: Loss_Functions.cpp  Loss_Functions.h  Tensor_Loss_Functions.cpp  Tensor_Loss_Functions.h
Matrix_Dimension_Checks/: Matrix_Assertion_Checks.cpp  Matrix_Assertion_Checks.h
Multi Layer Perceptron/Neural_Blocks/: Neural_Blocks.h
Multi Layer Perceptron/Neural_Layers/: Neural_Layer_Skeleton.cpp
Multi Layer Perceptron/Optimization_Algorithms/: Train_Block_by_Backpropagation.cpp  Train_Block_by_Backpropagation.h
NLP Utilities/: Tokenizer.cpp  Tokenizer.h
Neural_Blocks/: Neural_Blocks.cpp  Neural_Blocks.h
Neural_Layers/: Neural_Layer_Skeleton.cpp  Neural_Layer_Skeleton.h
Optimization Algorithms/: Train_Block_by_Backpropagation.cpp  Train_Block_by_Backpropagation.h
Optimization_Algorithms/: Train_Block_by_Backpropagation.cpp  Train_Block_by_Backpropagation.h
Tensor_Library/: Tensor_Library.cpp  Tensor_Library.h
Transformer_Architecture/: main.cpp
Transformer_Architecture/Attention_Block/: Multi_Head_Attention.cpp  Multi_Head_Attention.h
Transformer_Architecture/Batch_Operations/: Batch_Operations.cpp  Batch_Operations.h
Transformer_Architecture/Embedding_Operations/: Embedding_Operations.cpp  Embedding_Operations.h
Transformer_Architecture/MLP_Layers_For_Transformer/: Neural_Block.cpp  Neural_Block.h  Neural_Layer.cpp  Neural_Layer.h
Transformer_Architecture/Positional_Embeddings/: Fixed_Positional_Encoding.cpp  Fixed_Positional_Encoding.h
Transformer_Architecture/Residual_and_Normalization/: Layer_Normalization.cpp  Layer_Normalization.h  Residual_Stream.cpp  Residual_Stream.h
Transformer_Architecture/Single_Attention_Head/: Single_Attention_Head.cpp  Single_Attention_Head.h
Transformer_Architecture/Test_Data/: test_for_tokenizer.txt
Transformer_Architecture/Token_Embedding/: Token_Embedding.cpp  Token_Embedding.h
Transformer_Architecture/Tokenizer/: Tokenizer.cpp  Tokenizer.h
Utility_Functions/: Utility_Functions.cpp  Utility_Functions.h
Web_Assembly_Modules/include/: wasm_exports.h
Web_Assembly_Modules/src/: wasm_exports.cpp
Web_Visualizations/: FLUX_wasm.js  FLUX_wasm.wasm  index.html
Web_Visualizations/CSS/: styles.css
Web_Visualizations/Javascript/: visualizations.js
activation-function-derivatives/: ActivationFunctionDerivatives.cpp  ActivationFunctionDerivatives.h
activation-functions/: ActivationFunctions.cpp  ActivationFunctions.h
loss-functions/: TensorLossFunctions.cpp  TensorLossFunctions.h
model-architectures/convolutional-neural-networks/convolutional-layer/: ConvolutionalLayer.cpp  ConvolutionalLayer.h
model-architectures/convolutional-neural-networks/kernels/: Kernels.cpp  Kernels.h
model-architectures/convolutional-neural-networks/padding-functions/: TensorPadding.cpp  TensorPadding.h
model-architectures/convolutional-neural-networks/pooling-layer/: PoolingLayers.cpp  PoolingLayers.h
model-architectures/convolutional-neural-networks/utility-migratory-functions/: UtilityMigratoryFunctions.cpp  UtilityMigratoryFunctions.h
model-architectures/multi-layer-perceptron/: main.cpp
model-architectures/multi-layer-perceptron/mlp-feed-forward/: NeuralBlock.cpp  NeuralBlock.h  NeuralLayer.cpp  NeuralLayer.h
model-architectures/transformers/: main.cpp
model-architectures/transformers/batch-operations/: BatchOperations.cpp  BatchOperations.h
model-architectures/transformers/embedding-operations/: EmbeddingOperations.cpp
model-architectures/transformers/layer-normalization/: LayerNormalization.cpp  LayerNormalization.h
model-architectures/transformers/multi-head-attention/: MultiHeadAttention.cpp  MultiHeadAttention.h
model-architectures/transformers/positional-embeddings/: FixedPositionalEncoding.cpp  FixedPositionalEncoding.h
model-architectures/transformers/residual-stream/: ResidualStream.cpp  ResidualStream.h
model-architectures/transformers/single-attention-head/: SingleAttentionHead.cpp  SingleAttentionHead.h
model-architectures/transformers/token_embedding/: TokenEmbedding.cpp  TokenEmbedding.h
model-architectures/transformers/tokenizer/: Tokenizer.cpp  Tokenizer.h
tensor-library/: TensorLibrary.cpp
web-visualizations/: main.cpp
web-visualizations/binary-serializer/: DataFeeder.cpp  DataFeeder.h
web-visualizations/tensor-data-extractor/: TensorDataExtractor.cpp  TensorDataExtractor.h
